code/tui/src/app/snapshots/app__marketplace_tests__marketplace_chinese_tabs.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                               [— / —] [仪 表 盘 ]  
                                                                                                    
                                                                                                    
            ┌── 扩 展 市 场  ─────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   技 能     插 件     MCP    连 接 器     可 执 行 程 序     编 程 语 言     主 题        │             
            │   语 言 包     资 源                                                         │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ rust                                                               │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  此 页 暂 无 软 件 包                                                          │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │  Tab/Shift+Tab 切 换  · Enter 返 回  · Esc 关 闭                              │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > 构 建 任 何 内 容                                                                                     
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型
