code/tui/src/app/snapshots/app__marketplace_tests__marketplace_inline_search.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ Extensions ───────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
   Skills    Marketplace    MCP    Hooks    Plugins                                                 
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search Marketplace; Enter to search                                                          │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
> official                                                                                       -  
  Plugins ────────────────────────────────────────────────────────────────────────────────────────  
  Guide                                                                                          +  
                                                                                                    
  / search · ←/→ details · i install · r refresh
