code/tui/src/app/snapshots/app__marketplace_tests__marketplace_installed_version_expanded.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Marketplace ──────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Skills    Plugins    MCP    Connectors    Executables    Languages    │             
            │   Themes    Localizations    Assets                                     │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search Marketplace; Enter to search                                │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Installed                                                              │             
            │  web                                                                  + │             
            │> web                                                                  - │             
            │    Source: official                                                     │             
            │    Description: —                                                       │             
            │    Version: 2.0.0                                                       │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │  / search · ←/→ details · u uninstall · r refresh                       │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
