code/tui/src/app/snapshots/app__marketplace_tests__marketplace_sources_collapsed.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Extensions ───────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Skills    Marketplace    MCP    Hooks    Plugins                      │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search Marketplace; Enter to search                                │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> ash                                                                  + │             
            │  claude-plugins-official                                              - │             
            │  Plugins ────────────────────────────────────────────────────────────── │             
            │  Tools                                                                + │             
            │  openai                                                               - │             
            │  Skills ─────────────────────────────────────────────────────────────── │             
            │  Review                                                               + │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │  / search · ←/→ details · i install · r refresh                         │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
